Add list() and tuple() types